Upload of revised books 1655 and 0389

--- a/Share/0389.html
+++ b/Share/0389.html
@@ -12,18 +12,45 @@ $title = '倪匡傳奇';
 $book = 'I0389';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2011/1/14 (111K) 2017/9/1');
+ShowUpdbDownload('2023/7/25 (111K) 2017/9/1 2011/1/14');
 ShowPrcDownload('2011/1/14 (121K) 2017/9/1');
 ShowMobiDownload('2016/3/4 (387K) 2017/9/1');
-ShowEpubDownload('2011/1/14 (106K) 2017/9/1');
-ShowVEpubDownload('2013/11/1 (106K) 2017/9/1');
+ShowEpubDownload('2023/7/25 (106K) 2017/9/1 2011/1/14');
+ShowVEpubDownload('2023/7/25 (106K) 2017/9/1 2013/11/1');
 BookSectionEnd();
 ?>
 <img src="covers/0389.jpg" HSPACE=8 vspace=8 align=right>
-好讀書櫃《典藏版》，感謝何永鴻製作：「本書是倪先生講述他少年時代在中國時的經歷，我在很多年前已經看過，實在很值得向喜歡倪匡的朋友介紹此書。而且在網上我從未見過，因此我花了很多時間整理此書 (我是用倉頡輸入法逐個字輸入，而不是用scanner。也可因此而練習倉頡輸入法)。希望能令多些人可欣賞此好書。」感謝江季杭、A Yung勘誤。感謝Gilbert勘誤3處。感謝難兄難弟提供書影。感謝guinness提供掃描檔，感謝henry142按掃描檔再校正。<br>
+好讀書櫃《典藏版》，感謝何永鴻製作：「本書是倪先生講述他少年時代在中國時的經歷，我在很多年前已經看過，實在很值得向喜歡倪匡的朋友介紹此書。而且在網上我從未見過，因此我花了很多時間整理此書 (我是用倉頡輸入法逐個字輸入，而不是用scanner。也可因此而練習倉頡輸入法)。希望能令多些人可欣賞此好書。」感謝難兄難弟提供書影。感謝guinness提供掃描檔，感謝henry142按掃描檔再校正。感謝江季杭、A Yung、Gilbert、博龍勘誤。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(博龍 2023/7/25)<br>
+在吳縣之間的一帶/在吳縣和太倉縣之間的一帶<br>
+其實﹁審﹂之前／其實，﹁審﹂之前<br>
+夏天穿短褲/夏天穿短袴<br>
+穿上兩條單褲/穿上兩條單袴<br>
+而在那種境地/而人在那種境地<br>
+雙腳浸入鹽之後/雙腳浸入鹽水之後<br>
+連褲子都忘了提/連袴子都忘了提<br>
+﹁汗滴禾下土﹂/﹁汗滴未下土﹂<br>
+﹁甚麼人﹂/﹁什麼人﹂<br>
+也不得知/也不得而知<br>
+鬼在哪裏？/鬼在哪裏！<br>
+身子抖得像酒糠一樣/身子抖得像篩糠一樣（原書有誤）<br>
+帶了棉衣棉褲來/帶了棉衣棉袴來<br>
+恐怕是白吃的了，/恐怕是白吃的了。<br>
+從農場到鎮江/從農場到鎭江<br>
+鋪上一條舊毯/鋪上一條舊毡<br>
+真是世事難兩全/眞是世事難兩全<br>
+一條棉褲/一條棉袴<br>
+有暖氣、有長椅/有暖氣、有長櫈<br>
+﹁氈疙瘩﹂/﹁疙瘩﹂<br>
+一種羊毛氈/一種羊毛毡<br>
+可以保持氈靴內/可以保持毡靴內<br>
+通體是淺色/通體是淺灰色<br>
+這一隻貓陪著我/這一隻貓，陪著<br>
+貓大概是二月分來的/貓大概是二月份來的<br>
+<br>
 (mPDB 2016/3/4)<br>
 新彊/新疆<br>
 興高釆烈/興高采烈<br>
