--- a/Share/1010490219.html
+++ b/Share/1010490219.html
@@ -22,7 +22,7 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-（全球患者急遽激增<br>
+全球患者急遽激增<br>
 美國《時代雜誌》、《新聞周刊》NBC熱烈報導<br>
 科學家競相研究<br>
 <br>
