--- a/book/1655.html
+++ b/book/1655.html
@@ -12,15 +12,15 @@ $title = '魂斷山崖';
 $book = 'E1655';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/4/1 (212K)');
+ShowUpdbDownload('2023/7/25 (212K) 2016/4/1');
 ShowPrcDownload('2016/4/1 (213K)');
 ShowMobiDownload('2016/4/1 (592K)');
-ShowEpubDownload('2016/4/1 (133K)');
-ShowVEpubDownload('2016/4/1 (133K)');
+ShowEpubDownload('2023/7/25 (133K) 2016/4/1');
+ShowVEpubDownload('2023/7/25 (133K) 2016/4/1');
 BookSectionEnd();
 ?>
 <img src="covers/1655.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Sai Lee提供掃描檔，感謝guinness按掃描檔OCR整理製作。譯者朱佩蘭。感謝Wendy勘誤1處。<br>
+好讀書櫃《典藏版》，感謝Sai Lee提供掃描檔，感謝guinness按掃描檔OCR整理製作。譯者朱佩蘭。感謝Wendy,sue1289勘誤。<br>
 <br>
 本書是松本清張的四個中短篇推理，〈魂斷山崖〉〈金池塘〉〈焰火輓歌〉〈凝視〉。<br>
 <br>
@@ -31,7 +31,23 @@ BookSectionEnd();
 青塚與阿菊來自何處？他們與企業家市&#22338;秀彥的曖昧關係，是如何發生的？這張由青塚提供的山景圖封面，隱藏著不可告人的秘密嗎？市&#22338;是因此而受制於青塚？一連串的謎團、錯綜紛紜的人際關係，使好奇的岡本落入沉思……<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(sue1289 2023/7/25)<br>
+確貴是市坂/確實是市坂<br>
+這份姿託書/這份委託書<br>
+主進行造園/正進行造園<br>
+自己冢裡的/自己家裡的<br>
+島一週/島一周（原書有誤）<br>
+往返一週/往返一周（原書有誤）<br>
+上日遇難/上田遇難<br>
+請你帶路/請妳帶路<br>
+鈞竿/釣竿<br>
+杉捕仙太郎/杉浦仙太郎<br>
+探取了指紋/採取了指紋<br>
+一閃郎逝/一閃即逝<br>
+手加傷害/手傷害<br>
+警祭早日/警察早日<br>
+<br>
 (Wendy 2016/4/1)<br>
 因為是深衣/因為是深夜<br>
 <br>
