Upload revised book 1010490148

--- a/Share/1010490148.html
+++ b/Share/1010490148.html
@@ -12,13 +12,13 @@ $title = '天城山奇案';
 $book = 'P1010490148';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/5/16 2023/5/10');
-ShowEpubDownload('2023/5/16 2023/5/10');
-ShowVEpubDownload('2023/5/16 2023/5/10');
+ShowUpdbDownload('2023/7/29 2023/5/16 2023/5/10');
+ShowEpubDownload('2023/7/29 2023/5/16 2023/5/10');
+ShowVEpubDownload('2023/7/29 2023/5/16 2023/5/10');
 BookSectionEnd();
 ?>
 <img src="covers/1010490148.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝佳佳整理製作，感謝Sai Lee提供掃瞄檔。感謝Gilbert勘誤。<br>
+好讀書櫃【典藏版】，感謝佳佳整理製作，感謝Sai Lee提供掃瞄檔。感謝Gilbert,sue1289勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -50,6 +50,153 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(sue1289 2023/7/29)<br>
+狡滑/狡猾<br>
+麽/麼<br>
+一思即此/一思及此(原書有誤)<br>
+靜縣警察/靜岡縣警察<br>
+列為犯罪之一/列為罪犯之一<br>
+束西/東西<br>
+「S」記的半/「Ｓ」記的半<br>
+時近見到一位/附近見到一位<br>
+是過天城山的/走過天城山的<br>
+甚致有些地方/甚至有些地方<br>
+登記薄/登記簿<br>
+冲/沖<br>
+XXX/×××<br>
+XX/××<br>
+又、大塚花/又，大塚花<br>
+换/換<br>
+傳場出去/傳揚出去<br>
+一般的問着：/一般的問着。(原書有誤)<br>
+毫無節象/毫無印象<br>
+暧昧/曖昧<br>
+從只袋中掏出/從紙袋中掏出<br>
+捜査員/搜查員<br>
+随/隨<br>
+不可外宣傳/不可對外宣傳<br>
+個件兇殺案/這件兇殺案<br>
+確實會遇見/確實曾遇見<br>
+B銀/Ｂ銀<br>
+B分行/Ｂ分行<br>
+R分行/Ｒ分行<br>
+R地區/Ｒ地區<br>
+R區/Ｒ區<br>
+三歲是身材高大/三歲，是身材高大<br>
+可是他的外貌/可是她的外貌(原書有誤)<br>
+拜訪他的時候/拜訪她的時候(原書有誤)<br>
+餐飲業，旅館業、酒家等等/餐飲業、旅館業、酒家等等<br>
+也許對他有特別/也許對她有特別(原書有誤)<br>
+配合着他的櫻桃小口/配合着她的櫻桃小口(原書有誤)<br>
+從他的臉龐到/從她的臉龐到(原書有誤)<br>
+奈美要從他的存款/奈美要從她的存款(原書有誤)<br>
+做得太過份理由是他/做得太過份，理由是他(原書有誤)<br>
+知道他的背後/知道她的背後(原書有誤)<br>
+同事們遠沒有人察覺/同事們還沒有人察覺<br>
+應該向他作禮貌上/應該向她作禮貌上(原書有誤)<br>
+活耀/活躍(原書有誤)<br>
+他的餐廳裝潢/她的餐廳裝潢(原書有誤)<br>
+S街/Ｓ街<br>
+N宮/Ｎ宮<br>
+而搖着頭說：/而搖着頭說。(原書有誤)<br>
+想要讓他知道/想要讓她知道(原書有誤)<br>
+你出面邀請他/你出面邀請她(原書有誤)<br>
+一面轉彎車子向著/一面轉彎，車子向著<br>
+一面又問。/一面又問：(原書有誤)<br>
+你下車去叫他/你下車去叫她(原書有誤)<br>
+他喜歡宿一夜/她喜歡宿一夜(原書有誤)<br>
+能够和他的戀人/能够和她的戀人(原書有誤)<br>
+以他今天的外出/以她今天的外出(原書有誤)<br>
+這種消息稍若傳到/這種消息若傳到<br>
+只是他的眼睛會/只是她的眼睛會(原書有誤)<br>
+讚同地說/贊同地說<br>
+稱呼他爲太太/稱呼她爲太太(原書有誤)<br>
+桑山更緊跟着/桑山更緊張着<br>
+像昨夜一般地他們三個人/像昨夜一般地，他們三個人<br>
+偶爾瞟眼看他/偶爾瞟眼看她(原書有誤)<br>
+慢慢的喝這是很緩慢/慢慢的喝，這是很緩慢<br>
+這樣話是不合適的/這樣說是不合適的<br>
+爲什麼在這個候時/爲什麼在這個時候(原書有誤)<br>
+慌張地離閉奈美/慌張地離開奈美<br>
+盏/盞<br>
+我我時常和他/我時常和他(原書有誤)<br>
+閧堂大笑/鬨堂大笑<br>
+違位秘密/這位秘密<br>
+說看，把拿鋼筆/說著，把拿鋼筆<br>
+奈美的，肉體上/奈美的肉體上<br>
+胸部彷彿受到伊牟田博助的信件/伊牟田博助的信件<br>
+除了那封賀年卡之外，什麼消息也有/除了那封賀年卡之外，什麼消息也沒有(原書有誤)<br>
+屬於任何一派的換句話說/屬於任何一派的，換句話說<br>
+收了我的紅包，他也會害怕/收了我的紅包，她也會害怕(原書有誤)<br>
+不很清楚不過，/不很清楚，不過，<br>
+他就說吃過午飯/她就說吃過午飯(原書有誤)<br>
+這時他正夾了一塊/這時她正夾了一塊(原書有誤)<br>
+T銀/Ｔ銀<br>
+在電話裏，福光說。/在電話裏，福光說：<br>
+確度令沖野/確實令沖野<br>
+T大/Ｔ大<br>
+带/帶<br>
+從東窗看汽車裏面/從車窗看汽車裏面<br>
+點點頭，接着又說。/點點頭，接着又說：(原書有誤)<br>
+K大/Ｋ大<br>
+绑/綁<br>
+弟弟的話，他才說出/弟弟的話，她才說出(原書有誤)<br>
+拍的照片給他看/拍的照片給她看(原書有誤)<br>
+他一看照片，/她一看照片，(原書有誤)<br>
+他的肩膀顫抖/她的肩膀顫抖(原書有誤)<br>
+他先擦了一下眼/她先擦了一下眼(原書有誤)<br>
+和藹地安慰他/和藹地安慰她(原書有誤)<br>
+辈/輩<br>
+睁/睜<br>
+要他立刻到東京/要她立刻到東京(原書有誤)<br>
+他也表示不知道/她也表示不知道(原書有誤)<br>
+他和我們夫妻一樣/她和我們夫妻一樣(原書有誤)<br>
+火車同故鄉/火車回故鄉<br>
+一些他有點憂愁的話，他表示，/一些她有點憂愁的話，她表示，(原書有誤)<br>
+靜子，請他來東京/靜子，請她來東京(原書有誤)<br>
+妻子的到達，他也許會/妻子的到達，她也許會(原書有誤)<br>
+東京的關係，他的臉上/東京的關係，她的臉上(原書有誤)<br>
+詢問，而等到他稍微冷靜/詢問，而等到她稍微冷靜(原書有誤)<br>
+他的這種想法，/她的這種想法，(原書有誤)<br>
+T百/Ｔ百<br>
+這些他行動的時間/這些她行動的時間(原書有誤)<br>
+T影/Ｔ影<br>
+T電/Ｔ電<br>
+T明/Ｔ明<br>
+K女/Ｋ女<br>
+K明/Ｋ明<br>
+說話中，他的表情/說話中，她的表情(原書有誤)<br>
+梅田子/梅田靜子<br>
+周密群查/周密詳查<br>
+，依他的裝扮，/，依她的裝扮，(原書有誤)<br>
+唤/喚<br>
+可是同來之後還/可是回來之後還<br>
+幾乎溶解/幾乎熔解(原書有誤)<br>
+R人/Ｒ人<br>
+閣眼聽著/閤眼聽著<br>
+厨/廚<br>
+廚俱販賣/廚具販賣<br>
+梅田太郎/梅田安太郎<br>
+正太露出微笑說：/正太露出微笑說。(原書有誤)<br>
+S亭/Ｓ亭<br>
+他買的廚房/她買的廚房(原書有誤)<br>
+他買這些東西/她買這些東西(原書有誤)<br>
+在他的千住的住宅告訴他的/在她的千住的住宅告訴她的(原書有誤)<br>
+？」田村警部問：/？」田村警部問。(原書有誤)<br>
+存根來證明他到新宿/存根來證明她到新宿(原書有誤)<br>
+可是，他却保存得很/可是，她却保存得很(原書有誤)<br>
+良作替他出的主意/良作替她出的主意(原書有誤)<br>
+一起去的，他九點才到/一起去的，她九點才到(原書有誤)<br>
+而他在幫我修臉時/而她在幫我修臉時(原書有誤)<br>
+並看看他的臉色，/並看看她的臉色，(原書有誤)<br>
+他的臉色，一下子/她的臉色，一下子(原書有誤)<br>
+聽說，他很少離開/聽說，她很少離開(原書有誤)<br>
+總而言之，他和青木良作/總而言之，她和青木良作(原書有誤)<br>
+牌腹/脾腹<br>
+一種理由來拜託他/一種理由來拜託她(原書有誤)<br>
+和泉多摩川東站/和泉多摩川車站<br>
+想着，他可能是憂慮而去/想着，她可能是憂慮而去(原書有誤)<br>
+<br>
 (Gilbert 2023/5/16)<br>
 剝其衣物，走物品/剝其衣物，運走物品<br>
 锲而不舍/鍥而不舍<br>
