Initial upload of books 1010490228 and 1010490229

--- a/Share/1010490227.html
+++ b/Share/1010490227.html
@@ -8,7 +8,7 @@ SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '朱絲婷．李維';
-$title = '八年抗戰中的蔣介石（1937-1945）';
+$title = '壞女兒';
 $book = 'P1010490227';
 BookSectionBegin();
 ShowBookTitle();
