Upload revised book 1010490138

--- a/Share/1010490138.html
+++ b/Share/1010490138.html
@@ -12,9 +12,9 @@ $title = '青春的徬徨';
 $book = 'P1010490138';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/6/1 2023/5/3');
-ShowEpubDownload('2023/6/1 2023/5/3');
-ShowVEpubDownload('2023/6/1 2023/5/3');
+ShowUpdbDownload('2023/8/3 2023/6/1 2023/5/3');
+ShowEpubDownload('2023/8/3 2023/6/1 2023/5/3');
+ShowVEpubDownload('2023/8/3 2023/6/1 2023/5/3');
 BookSectionEnd();
 ?>
 <img src="covers/1010490138.jpg" HSPACE=8 align=right>
@@ -50,6 +50,73 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(sue1289 2023/8/3)<br>
+正好預計/正如預計(原書有誤)<br>
+還是四周/環視四周<br>
+跌落失足崖下/失足跌落崖下<br>
+位置不太大/位置不太高<br>
+郎心狠心/郎心狼心<br>
+文作不會見過/文作不曾見過<br>
+連想都不會想過/連想都不曾想過<br>
+建坪二十二年/建坪二十二坪<br>
+居民A/居民Ａ<br>
+X日/Ｘ日<br>
+G町/Ｇ町<br>
+猪太年輕時/豬太郎年輕時<br>
+猪/豬(統一用豬)<br>
+消防除員/消防隊員<br>
+是溪谷對面則是聳立/是溪谷，對面則是聳立<br>
+診治美的可能/診治美紗的可能<br>
+野樹的果實/野漆樹的果實<br>
+傷醫師照顧的/傷醫師頭顱的<br>
+溶岩急斜坡/熔岩急斜坡(原書有誤)<br>
+站在豆大的火口壁/站在斗大的火口壁(原書有誤)<br>
+就不會吵過架/就不曾吵過架<br>
+會委託村裏的/曾委託村裏的<br>
+戴着木材/載着木材<br>
+K拘留所/Ｋ拘留所<br>
+一夫四百/一天四百<br>
+A電/Ａ電<br>
+暧昧不清/曖昧不清<br>
+D署/Ｄ署<br>
+贜物長出脚來/(未改)原書有誤，但不知如何改<br>
+津君還年輕/津坂君還年輕<br>
+原本是健康的章子無從/原本是健康的，章子無從(原書有誤)<br>
+穿上外掛來/穿上外褂來<br>
+搖頭同答/搖頭回答<br>
+秀治同座後/秀治回座後<br>
+H總/Ｈ總<br>
+體的房問/體的房間<br>
+小澤之助/小澤誠之助<br>
+弓子會打電話/弓子曾打電話<br>
+中間得緊緊/中間繃得緊緊<br>
+使動絞住/使勁絞住<br>
+兩年前他也看見/兩年前牠也看見<br>
+摸摸他的頭，然後抓住他的頸圈/摸摸牠的頭，然後抓住牠的頸圈<br>
+把他殺死/把牠殺死<br>
+把他搞丟了/把牠搞丟了<br>
+會調養高價/會飼養高價<br>
+楡館號房間的/楡館△△號房間的<br>
+細井子/細井淑子<br>
+弓表示要給/弓子表示要給<br>
+發出的聲音/發出驚訝的聲音<br>
+好好同答/好好回答<br>
+也不會要求/也不曾要求<br>
+七點左右同來/七點左右回來<br>
+米上撤了許多/米上撒了許多<br>
+很晚才同來/很晚才回來<br>
+我在健一那邊看/我往健一那邊看<br>
+案子的家/泰子的家<br>
+劈過的榮/劈過的柴<br>
+剛好同來/剛好回來<br>
+M市/Ｍ市<br>
+下來一喘口氣/下來喘一口氣<br>
+不詳的預感/不祥的預感<br>
+產介昂奮/彥介昂奮<br>
+搶銀行的爲資本/搶銀行的錢爲資本<br>
+叮田武治/町田武治<br>
+A先生/A先生<br>
+<br>
 (Gilbert 2023/6/1)<br>
 從父親那事獲悉/從父親那裏獲悉<br>
 耶馬渓/耶馬溪（共二處）<br>
