Upload of revised book 1634

--- a/book/1634.html
+++ b/book/1634.html
@@ -12,20 +12,43 @@ $title = '詐婚';
 $book = 'E1634';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/3/4 (302K) 2016/5/6');
+ShowUpdbDownload('2023/8/5 (302K) 2016/5/6 2016/3/4');
 ShowPrcDownload('2016/3/4 (299K) 2016/5/6');
 ShowMobiDownload('2016/3/4 (829K) 2016/5/6');
-ShowEpubDownload('2016/3/4 (192K) 2016/5/6');
-ShowVEpubDownload('2016/3/4 (192K) 2016/5/6');
+ShowEpubDownload('2023/8/5 (192K) 2016/5/6 2016/3/4');
+ShowVEpubDownload('2023/8/5 (192K) 2016/5/6 2016/3/4');
 BookSectionEnd();
 ?>
 <img src="covers/1634.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Sai Lee提供掃描檔，感謝guinness按掃描檔OCR整理製作。譯者葉石濤等。感謝Gilbert按掃描檔勘誤9處、Vivian勘誤1處。<br>
+好讀書櫃《典藏版》，感謝Sai Lee提供掃描檔，感謝guinness按掃描檔OCR整理製作。譯者葉石濤等。感謝Gilbert、Vivian、sue1289勘誤。<br>
 <br>
 本書精選了八位作家十篇作品（其中松本清張、三好徹各兩篇，森村誠一、仁木悅子、夏樹靜子、佐野洋、&#31545;澤左保、石澤英太郎各選一篇）。從這些作品中我們可以窺見每一位作家的功力都相當可觀。無論就結構、技巧、文字的魅力、烘托的氣氛、情節的懸宕、人性的刻繪、現實的剖析而論……在在都無遜於純文學的創作，絕非只止於故事的推衍、人物的堆砌而已。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(sue1289 2023/8/5)<br>
+一個禮拜的時候所以預感可以/一個禮拜的時候，所以預感可以<br>
+門沉著的說。/門沉著的說：(原書有誤)<br>
+房聞有三/房間有三<br>
+間接到得到證言/間接得到證言(原書有誤)<br>
+截鐵地說。/截鐵地說：(原書有誤)<br>
+葉子繼續說。/葉子繼續說：(原書有誤)<br>
+一會兄關/一會兒關<br>
+一這一類的話/這一類的話<br>
+由紀突然說道：這/由紀突然說道。這(原書有誤)<br>
+傳達的姊姊不知/傳達室的姊姊不知(原書有誤)<br>
+落月的餘暉/落日的餘暉<br>
+望看碧川/望著碧川<br>
+單純電車/單軌電車(原書有誤)<br>
+洋自己會說/洋自己曾說<br>
+趕回松木了/趕回松本了<br>
+螺旋漿/螺旋槳(原書有誤)<br>
+他的體形又都/他們的體形又都(原書有誤)<br>
+校對讀友另註：<br>
+以下兩個等式，橫式的epub檔用全型，直式的epub及upub改為半型，這樣看起來較順暢些。(原書掃瞄檔乃直式用全型，但排橫式，電子書若用全型則不能呈現橫式)<br>
+ＡＢ─Ａ＝Ｂ/AB-A=B<br>
+Ｂ─Ｂ＝Ｏ/B-B=0<br>
+<br>
 (Vivian 2016/5/6)<br>
 所採訪/所採訪的 <font color=#0066CC>(依原書未改)</font><br>
 那麼會/那麼急 <font color=#0066CC>(改了，原書有誤。)</font><br>
