Upload revised book 1010490118

--- a/Share/1010490118.html
+++ b/Share/1010490118.html
@@ -12,13 +12,13 @@ $title = '嫌疑';
 $book = 'P1010490118';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/23 2023/3/20');
-ShowEpubDownload('2023/3/23 2023/3/20');
-ShowVEpubDownload('2023/3/23 2023/3/20');
+ShowUpdbDownload('2023/8/8 2023/3/23 2023/3/20');
+ShowEpubDownload('2023/8/8 2023/3/23 2023/3/20');
+ShowVEpubDownload('2023/8/8 2023/3/23 2023/3/20');
 BookSectionEnd();
 ?>
 <img src="covers/1010490118.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝佳佳整理製作，感謝chin223提供掃瞄檔。感謝Gilbert勘誤。<br>
+好讀書櫃【典藏版】，感謝佳佳整理製作，感謝chin223提供掃瞄檔。感謝Gilbert,sue1289勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -35,7 +35,7 @@ BookSectionEnd();
 透過傳媒所見聞的事件輪廓，是否即為真相？<br>
 誰能保證，世上從沒有純粹的正義沉冤海底？<br>
 <br>
-1982改編電影：柄本明、桃井薰 主演　野村芳太郎 導演<br>
+1982改編電影：柄本明、桃井薰 主演 野村芳太郎 導演<br>
 1992首度改編電視單元劇：石橋凌、石田步 主演<br>
 2003再度改編電視單元劇：佐藤浩市、余貴美子 主演<br>
 2009三度改編電視單元劇（紀念清張百年冥誕）：田村正和、澤口靖子 主演<br>
@@ -79,6 +79,24 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(sue1289 2023/8/8)<br>
+《砂之器》、《砂之器》/《砂之器》<br>
+這而總是/這兒總是(原書有誤)<br>
+於是她到/於是他到<br>
+話筒傅來/話筒傳來<br>
+車內頂蓬/車內頂篷<br>
+鲸波/鯨波<br>
+五官然讓她成為/五官，自然讓她成為<br>
+高挑豐滿/高䠷豐滿<br>
+暧昧/曖昧<br>
+心滿意足清晨步下/心滿意足　清晨步下<br>
+所發動的亂/所發動的叛亂<br>
+囚衣的因犯/囚衣的囚犯<br>
+一八三八十一九二二/一八三八─一九二二<br>
+身材高挑/身材高䠷<br>
+與論強烈/輿論強烈<br>
+面面相觑/面面相覷<br>
+<br>
 (Gilbert 2023/03/23)<br>
 一九六〇〇年/一九六〇年<br>
 江戶川亂步獎等多項獎項評審委現為日本推理文學大獎的評審委員/江戶川亂步獎等多項獎項評審委員，現為日本推理文學大獎的評審委員<br>
@@ -95,10 +113,8 @@ BookSectionEnd();
 有關更其利益/有關變更其利益<br>
 甲級戰費/甲級戰犯<br>
 終日戰爭/中日戰爭<br>
-<br>
 Dondorf　&　Naumann/Dondorf　＆　Naumann（共二十一處，修正為全型以避免亂碼）<br>
 Dondorf & Naumann/Dondorf　＆　Naumann（僅一處，修正為全型並與其他格式統一，以避免亂碼）<br>
-<br>
 I子小姐/Ｉ子小姐（共五處，此處無錯誤，但因半型《I》與前後中文極為接近易妨礙閱讀，故作此修正，並將內文單字母簡寫統一格式）<br>
 A案/Ａ案<br>
 F與S等港口/Ｆ與Ｓ等港口<br>
