Initial upload of books 1010490252 and 1010490253

--- a/book/1573.html
+++ b/book/1573.html
@@ -1,13 +1,13 @@
 <script type="text/javascript">
-SetTitle("陀思妥耶夫斯基《白夜》");
-SetLink('<a href="?M=hd&P=fiction-4">小說園地 書目</a>');
+SetTitle("杜斯妥也夫斯基《白夜》");
+SetLink('<a href="?M=hd&P=fiction-6">小說園地 書目</a>');
 </script>
 
 <table class="m11" BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
 <tr><td>
 <?php
 require_once('show-book.php');
-$author = '陀思妥耶夫斯基';
+$author = '杜斯妥也夫斯基';
 $title = '白夜'; 
 $book = 'H1573';
 BookSectionBegin();
