Initial upload of books 1010490256 and 1010490257

--- a/Share/1010490255.html
+++ b/Share/1010490255.html
@@ -74,9 +74,10 @@ BookSectionEnd();
 <br>
 譯者簡介：<br>
 <br>
-席玉蘋<br>
+楊佳蓉<br>
 <br>
-政治大學國貿系畢業，美國德州理工大學企管碩士。曾四度獲得文建會梁實秋文學獎之譯詩、譯文獎，現居高雄，專事譯作、寫作。<br>
+臺灣大學外國語文學系畢業。現為自由譯者，譯有《藏身處》、《希特勒的皇帝夢》、《關鍵96小時》、《完美殺機》（以上皆由臺灣商務出版）、《聖嬰降臨書》、《在妳身邊90天》、《黑屋》、《馬雅預言書》系列、《早安，陌生人》、《下一頁，愛情》、《壁花姊妹秘密通信》、《借物少女》系列等書。<br>
+<br>
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
