--- a/book/audioAB003.html
+++ b/book/audioAB003.html
@@ -7,42 +7,13 @@ require_once('player.php');
 
 <?php
 
-PlayMP3('AB003-01', '《序》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-02', '第一篇《留情（一）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-03', '第一篇《留情（二）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-04', '第一篇《留情（三）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-05', '第一篇《留情（四）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-06', '第一篇《留情（五）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-07', '第一篇《留情（六）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-08', '第二篇《鴻鸞禧（一）》劉小珍錄音 2023/6/27');
-PlayMP3('AB003-09', '第二篇《鴻鸞禧（二）》劉小珍錄音 2023/6/27');
-PlayMP3('AB003-10', '第二篇《鴻鸞禧（三）》劉小珍錄音 2023/6/27');
-PlayMP3('AB003-11', '第二篇《鴻鸞禧（四）》劉小珍錄音 2023/6/27');
-PlayMP3('AB003-12', '第三篇《紅玫瑰與白玫瑰（一）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-13', '第三篇《紅玫瑰與白玫瑰（二）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-14', '第三篇《紅玫瑰與白玫瑰（三）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-15', '第三篇《紅玫瑰與白玫瑰（四）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-16', '第三篇《紅玫瑰與白玫瑰（五）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-17', '第三篇《紅玫瑰與白玫瑰（六）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-18', '第三篇《紅玫瑰與白玫瑰（七）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-19', '第三篇《紅玫瑰與白玫瑰（八）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-20', '第三篇《紅玫瑰與白玫瑰（九）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-21', '第三篇《紅玫瑰與白玫瑰（十）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-22', '第三篇《紅玫瑰與白玫瑰（十一）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-23', '第三篇《紅玫瑰與白玫瑰（十二）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-24', '第三篇《紅玫瑰與白玫瑰（十三）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-25', '第三篇《紅玫瑰與白玫瑰（十四）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-26', '第三篇《紅玫瑰與白玫瑰（十五）》劉小珍錄音 2023/7/8');
-PlayMP3('AB003-27', '第四篇《等（一）》劉小珍錄音 2023/7/20');
-PlayMP3('AB003-28', '第四篇《等（二）》劉小珍錄音 2023/7/20');
-PlayMP3('AB003-29', '第四篇《等（三）》劉小珍錄音 2023/7/20');
-PlayMP3('AB003-30', '第四篇《等（四）》劉小珍錄音 2023/7/20');
-PlayMP3('AB003-31', '第五篇《桂花蒸阿小悲秋（一）》劉小珍錄音 2023/7/27');
-PlayMP3('AB003-32', '第五篇《桂花蒸阿小悲秋（二）》劉小珍錄音 2023/7/27');
-PlayMP3('AB003-33', '第五篇《桂花蒸阿小悲秋（三）》劉小珍錄音 2023/7/27');
-PlayMP3('AB003-34', '第五篇《桂花蒸阿小悲秋（四）》劉小珍錄音 2023/7/27');
-PlayMP3('AB003-35', '第五篇《桂花蒸阿小悲秋（五）》劉小珍錄音 2023/7/27');
-PlayMP3('AB003-36', '第五篇《桂花蒸阿小悲秋（六）》劉小珍錄音 2023/7/27');
+PlayMP3('AB003-00', '《序》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-01', '第一篇《留情》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-02', '第二篇《鴻鸞禧》劉小珍錄音 2023/6/27');
+PlayMP3('AB003-03', '第三篇《紅玫瑰與白玫瑰》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-04', '第四篇《等》劉小珍錄音 2023/7/20');
+PlayMP3('AB003-05', '第五篇《桂花蒸阿小悲秋》劉小珍錄音 2023/7/27');
+PlayMP3('AB003-06', '第六篇《金鎖記》劉小珍錄音 2023/8/10');
 ?>
 
 </table>
