Corrected typos and mistakes

--- a/Share/1010490251.html
+++ b/Share/1010490251.html
@@ -18,7 +18,7 @@ ShowVEpubDownload('2023/9/4');
 BookSectionEnd();
 ?>
 <img src="covers/1010490251.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Miaoyi/滿玉/sue1289整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Miaoyi/滿玉/sue1289整理製作，感謝邱五和chin223提供掃瞄檔。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
