Corrected typos and mistakes

--- a/book/1623.html
+++ b/book/1623.html
@@ -12,11 +12,11 @@ $title = '砂之器';
 $book = 'E1623';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/2/5 (550K) 2017/11/3');
+ShowUpdbDownload('2023/8/29 (550K) 2017/11/3 2016/2/5');
 ShowPrcDownload('2016/2/5 (501K) 2017/11/3');
 ShowMobiDownload('2016/2/5 (1377K) 2017/11/3');
-ShowEpubDownload('2016/2/5 (317K) 2017/11/3');
-ShowVEpubDownload('2016/2/5 (317K) 2017/11/3');
+ShowEpubDownload('2023/8/29 (317K) 2017/11/3 2016/2/5');
+ShowVEpubDownload('2023/8/29 (317K) 2017/11/3 2016/2/5');
 BookSectionEnd();
 ?>
 <img src="covers/1623.jpg" HSPACE=8 align=right>
@@ -35,7 +35,16 @@ BookSectionEnd();
 被譽為百年經典，書中人物之多，涉及的地理範圍之廣，敘述方式之綿密，辦案細節之縝密，小說中警方為了調查線索，幾乎跑遍了半個本州島，一開始是東北的秋田地區，接著又向西去了出雲，之後又到伊勢、石川、大阪。松本清張藉著對於各地風俗民情的描寫，幾乎作了趟本州日本旅遊一樣。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(sue1289 2023/8/29)<br>
+回頭搜查本部/回到搜查本部(原書有誤)<br>
+三件縮被的/三件棉被的<br>
+就麻頰了/就麻煩了<br>
+蘿蔔煮生肉/蘿蔔煮牛肉(原書有誤)<br>
+形成工弦波形音/形成正弦波形音(原書有誤)<br>
+無論如何拜託，請讓/無論如何，拜託請讓(原書有誤)<br>
+還麼說/這麼說<br>
+<br>
 (鯨某人 2017/11/3)<br>
 岳庫縣/兵庫縣 <font color=#0066CC>(原書有誤)</font><br>
 宦沢賢治/宮沢賢治 <font color=#0066CC>(原書有誤)</font><br>
