--- a/Share/1010490248.html
+++ b/Share/1010490248.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("奈波爾【抵達之謎】");
-SetLink('<a href="?M=hd&P=wisdom-5">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
