Initial upload of audiobook AB003 part 08

--- a/book/audioAB003.html
+++ b/book/audioAB003.html
@@ -14,11 +14,9 @@ PlayMP3('AB003-03', '第三篇《紅玫瑰與白玫瑰》劉小珍錄音 2023/7/
 PlayMP3('AB003-04', '第四篇《等》劉小珍錄音 2023/7/20');
 PlayMP3('AB003-05', '第五篇《桂花蒸阿小悲秋》劉小珍錄音 2023/7/27');
 PlayMP3('AB003-06', '第六篇《金鎖記》劉小珍錄音 2023/8/10');
-<<<<<<< HEAD
-=======
 PlayMP3('AB003-07', '第七篇《傾城之戀》劉小珍錄音 2023/8/24');
+PlayMP3('AB003-08', '第八篇《茉莉香片》劉小珍錄音 2023/9/5');
 
->>>>>>> bae82d6464d9be6a7c2974ad833dad3940f39e14
 ?>
 
 </table>
