Initial upload of audiobook AB001 part 58 and AB003 part 09

--- a/book/16F3.html
+++ b/book/16F3.html
@@ -35,7 +35,7 @@ BookSectionEnd();
 <br>
 《夢的解析》作者佛洛伊德昔日的愛徒、人本主義心理學之父阿弗雷德．阿德勒帶你積極找尋生命的意義，告訴你自己應該怎樣過好這一生。提高自制力，過自己想要的生活！<br>
 <br>
-這是一本值得一看的心理學著作，作者在心理學發展史上起了不可磨滅的作用，也擁有相當高的低位。<br>
+這是一本值得一看的心理學著作，作者在心理學發展史上起了不可磨滅的作用，也擁有相當高的地位。<br>
 <br>
 愈來愈多受它影響的人認為，阿德勒對心理學的貢獻超過了佛洛伊德，這不僅是因為其提出的自卑與補償作用是生活中普遍存在的，能對人們的生活產生實際作用與直接影響，還因為其心理學在心理學歷史中已成完整的體系，如心理學家墨菲所說：「阿德勒的心理學在心理學歷史中，是一個沿著我們今天應該稱之為社會科學的方向發展的心理學體系。」<br>
 <br>
