--- a/book/audioAB004.html
+++ b/book/audioAB004.html
@@ -1,4 +1,4 @@
-<h4><font color="CC0000">三毛</font>《夢裡花落知多少》朱世美錄音</h4>
+<h4><font color="CC0000">三毛</font>《夢裡花落知多少》尋錄音</h4>
 <?php
 require_once('player.php');
 ?>
@@ -7,11 +7,11 @@ require_once('player.php');
 
 <?php
 
-PlayMP3('AB004-00', '《扉言》朱世美錄音 2023/9/26');
-PlayMP3('AB004-01', '第一篇《不死鳥》朱世美錄音 2023/9/26');
-PlayMP3('AB004-02', '第二篇《明日又天涯》朱世美錄音 2023/9/26');
-PlayMP3('AB004-03', '第三篇《雲在青山月在天》朱世美錄音 2023/9/26');
-PlayMP3('AB004-04', '第四篇《歸》朱世美錄音 2023/9/26');
+PlayMP3('AB004-00', '《扉言》尋錄音 2023/9/26');
+PlayMP3('AB004-01', '第一篇《不死鳥》尋錄音 2023/9/26');
+PlayMP3('AB004-02', '第二篇《明日又天涯》尋錄音 2023/9/26');
+PlayMP3('AB004-03', '第三篇《雲在青山月在天》尋錄音 2023/9/26');
+PlayMP3('AB004-04', '第四篇《歸》尋錄音 2023/9/26');
 
 ?>
 
