Initial upload of audiobook AB004 part 05

--- a/book/audioAB004.html
+++ b/book/audioAB004.html
@@ -12,6 +12,7 @@ PlayMP3('AB004-01', '第一篇《不死鳥》尋錄音 2023/9/26');
 PlayMP3('AB004-02', '第二篇《明日又天涯》尋錄音 2023/9/26');
 PlayMP3('AB004-03', '第三篇《雲在青山月在天》尋錄音 2023/9/26');
 PlayMP3('AB004-04', '第四篇《歸》尋錄音 2023/9/26');
+PlayMP3('AB004-05', '第五篇《夢裡夢外》尋錄音 2023/9/28');
 
 ?>
 
