Initial upload of audiobook AB003 part 12

--- a/Share/1010490044.html
+++ b/Share/1010490044.html
@@ -18,6 +18,8 @@ ShowVEpubDownload('2023/1/3 2022/12/19');
 BookSectionEnd();
 ?>
 <img src="covers/1010490044.jpg" HSPACE=8 align=right>
+<strong><a href="https://haodooclassic.net/PDB/P/1010490044.updb">[下載 UPDB (Save link as...)]</a></strong><br>
+<br>
 好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。sue1289/McDull勘誤6處。<br>
 <br>
 <strong>本書簡介：</strong><br>
