--- a/book/50.html
+++ b/book/50.html
@@ -1,9 +1,9 @@
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
 <tr><td>
-<img src="images/bul_r.gif">《<a href="?M=m&P=B50a:0">典故探源一</a>》<a href="PDB/B/50a.pdb">[下載]</a>
+<img src="images/bul_r.gif">《<a href="?M=m&P=B50a:0">典故探源一</a>》<a href="https://haodooclassic.net/PDB/B/50a.pdb">[下載]</a>
  2001/11/29 (142K) 
 <br>
-<img src="images/bul_r.gif">《<a href="?M=m&P=B50b:0">典故探源二</a>》<a href="PDB/B/50b.pdb">[下載]</a>
+<img src="images/bul_r.gif">《<a href="?M=m&P=B50b:0">典故探源二</a>》<a href="https://haodooclassic.net/PDB/B/50b.pdb">[下載]</a>
  2001/11/29 (72K) 
 <br>
 <br>
