--- a/book/audioAB003.html
+++ b/book/audioAB003.html
@@ -19,6 +19,7 @@ PlayMP3('AB003-08', '第八篇《茉莉香片》劉小珍錄音 2023/9/5');
 PlayMP3('AB003-09', '第九篇《沉香屑，第一爐香（上）》劉小珍錄音 2023/9/12');
 PlayMP3('AB003-10', '第十篇《沉香屑，第一爐香（下）》劉小珍錄音 2023/9/19');
 PlayMP3('AB003-11', '第十一篇《沉香屑，第二爐香》劉小珍錄音 2023/10/3');
+PlayMP3('AB003-12', '第十二篇《琉璃瓦》劉小珍錄音 2023/10/10');
 
 ?>
 
