Initial upload of revised books 10G9c and 1010490266

--- a/Share/1010490266.html
+++ b/Share/1010490266.html
@@ -12,13 +12,13 @@ $title = '搞鬼';
 $book = 'P1010490266';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/9/22');
-ShowEpubDownload('2023/9/22');
-ShowVEpubDownload('2023/9/22');
+ShowUpdbDownload('2023/10/10 2023/9/22');
+ShowEpubDownload('2023/10/10 2023/9/22');
+ShowVEpubDownload('2023/10/10 2023/9/22');
 BookSectionEnd();
 ?>
 <img src="covers/1010490266.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔，感謝Jack Jiang勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -63,5 +63,10 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Jack Jiang 2023/10/10)<br>
+不要摘下 / 不要攔下<br>
+連動健將 / 運動健將<br>
+不鍵鋼 / 不鏽鋼<br>
+她說。謝謝妳 / 她說。﹁謝謝妳 (原書有誤)<br>
 </font>
 </td></tr></table>
