--- a/Share/10G9.html
+++ b/Share/10G9.html
@@ -29,10 +29,11 @@ Space();
 $title = '地海六部曲．三'; 
 $book = 'I10G9c';
 ShowBookTitle() ;
-ShowUpdbDownload('2010/7/17 (247K) 2011/1/28');
+ShowUpdbDownload('2023/10/10 (247K) 2010/7/17 2011/1/28');
 ShowPdbDownload('2010/7/17 (242K) 2011/1/28');
 ShowPrcDownload('2011/1/28 (276K)');
-ShowEpubDownload('2011/1/28 (185K)');
+ShowEpubDownload('2023/10/10 (185K) 2011/1/28');
+ShowVEpubDownload('2023/10/10 (185K)');
 Space();
 $title = '地海六部曲．四'; 
 $book = 'I10G9d';
@@ -59,16 +60,35 @@ ShowPrcDownload('2011/2/11 (254K)');
 ShowEpubDownload('2011/2/11 (159K)');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，《地海六部曲．一》感謝alias整理製作。感謝孔繁鈞、金澍、James、張克勘誤。感謝Naomi按原書勘誤一42處。<br>
-<br>
+好讀書櫃《經典版》，《地海六部曲．一》感謝alias整理製作。感謝孔繁鈞、金澍、James、張克、Jack Jiang勘誤。感謝Naomi按原書勘誤一42處。<br>
+<!--<br>
 好讀書櫃《典藏版》，感謝cenya參照原書整理校正過：「感謝貴站分享這些好書，使我們也想貢獻一點力量增加更多藏書。
 我們共三位打算一起整理整個六部曲；這不是我們製作的，是在網路上找到簡體版本，再拿來跟手邊的紙本校對修改的結果。
-本來想一起完成後，再提供給貴站，但是另外兩位需要比較久的時間，所以我先把我負責的部份寄出，依目前的進度，也許在幾週內我能寄出另外三本，但是另外兩位負責的第一集和第三集會需要等一段時間。」<br>
+本來想一起完成後，再提供給貴站，但是另外兩位需要比較久的時間，所以我先把我負責的部份寄出，依目前的進度，也許在幾週內我能寄出另外三本，但是另外兩位負責的第一集和第三集會需要等一段時間。」<br>-->
 <br>
 「地海六部曲」為西方奇幻文學經典之一，與托爾金的《魔戒三部曲》及路益思 (C.S. Lewis) 的「納尼亞年代記」齊名。作品意涵有別於西方基督教精神，而富有中國老子道家思想；並非強調善惡對立的二元價值觀，而是傳達「平衡」、陰陽同源的理念。本系列乃藉由奇幻冒險背景探討青少年成長的心理歷程，以豐富的隱喻象徵手法深刻描繪青少年在發展過程中面對的種種困惑與危機。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(地海六部曲．三 Jack Jiang 2023/10/10)<br>
+也?述 / 也敘述<br>
+阿睹 / 阿賭<br>
+海生格瑪 / 生於海洋的格瑪<br>
+馬哈仁安 / ﹃馬哈仁安﹄<br>
+阿肯巴 / ﹃阿肯巴﹄<br>
+﹃虛裡絲世家﹄ / ﹃虛里絲王朝﹄<br>
+﹃英拉德世家﹄ / ﹃英拉德王朝﹄<br>
+歷王塔 / ﹃歷代諸王之塔﹄<br>
+英拉德口首 / 英拉德口音 <br>
+幾聲?喊 / 幾個吶喊聲<br>
+?灑 / 拋灑<br>
+自家門口叫? / 自家門口叫罵<br>
+首領?述 / 首領敘述<br>
+龍居諸嶼 The Dragons﹃ Run / 龍居諸嶼 The Dragons' Run<br>
+咄咄吐? / 咄咄吐吶<br>
+?居然 / 但居然<br>
+高? / 高壽<br>
+<br>
 (地海六部曲．一 Naomi 2016/3/4)<br>
 已與原書比對過：<br>
 十場村/十楊村<br>
