Corrected book description typos for 1010490316

--- a/html/Share/1010490316.html
+++ b/html/Share/1010490316.html
@@ -51,7 +51,7 @@ BookSectionEnd();
 <br>
 而這時，有一雙藍眼睛，也正在看著拍攝過程……，危險正逐漸進逼。<br>
 <br>
-——雙線並行，錯綜複雜的人物關係，不到最後，不知道故事真相！——<br>
+雙線並行，錯綜複雜的人物關係，不到最後，不知道故事真相！<br>
 <br>
 <br>
 <strong>作者簡介：</strong><br>
