--- a/html/Share/1010490169.html
+++ b/html/Share/1010490169.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("詹姆斯．米勒【傅柯的生死愛欲】");
+SetTitle("詹姆斯．米勒【傅柯的生死愛慾】");
 SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 </script>
 
@@ -8,7 +8,7 @@ SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '詹姆斯．米勒';
-$title = '傅柯的生死愛欲';
+$title = '傅柯的生死愛慾';
 $book = 'P1010490169';
 BookSectionBegin();
 ShowBookTitle();
