--- a/html/Share/03A6.html
+++ b/html/Share/03A6.html
@@ -12,16 +12,182 @@ $author = '倪匡';
 $title = '死去活來'; 
 $book = 'I03A6';
 ShowBookTitle() ;
-ShowUpdbDownload('2012/4/9 (160K)');
-ShowPdbDownload('2007/12/20 (154K) 2012/4/9');
-ShowPrcDownload('2012/4/9 (160K)');
-ShowEpubDownload('2012/4/9 (106K)');
+ShowUpdbDownload('2023/10/17');
+ShowEpubDownload('2023/10/17');
+ShowVEpubDownload('2023/10/17');
 BookSectionEnd();
 ?>
-倪匡之衛斯理系列之130。感謝何永鴻整理製作。感謝Lin Lee勘誤：「站上原版本錯誤甚多，初看發現約有三百多處，勘誤前三章後發現若再繼續下去恐與原著相差遠矣，便在網上尋找新版本，有幸於<a href="http://www.fiction.co.nr" target=_blank>倪匡科幻小說收集站</a>中發覺，品質頗佳，可以加以利用。前三章以原版本為主對照新版本做勘誤，後七章以新版本為主交叉對照，其中新版本的計算機與資料兩個名詞，用原版本的電腦與數據取代。」<br>
+<img src="covers/03A6.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝Henry提供掃瞄檔和封面圖片，並整理製作及勘誤成為【典藏版】。<br>
+<br>
+好讀書櫃《經典版》，倪匡之衛斯理系列之130。感謝何永鴻整理製作。感謝Lin Lee勘誤：「站上原版本錯誤甚多，初看發現約有三百多處，勘誤前三章後發現若再繼續下去恐與原著相差遠矣，便在網上尋找新版本，有幸於倪匡科幻小說收集站中發覺，品質頗佳，可以加以利用。前三章以原版本為主對照新版本做勘誤，後七章以新版本為主交叉對照，其中新版本的計算機與資料兩個名詞，用原版本的電腦與數據取代。」<br>
 <br>
 <font size=2>
 勘誤表：<br>
+(Henry 2023/10/12)<br>
+電郵位址/電郵地址 （多處）<br>
+水相當清晰/水相當清澈<br>
+那是──蚊子/那是孑孓──蚊子<br>
+很多影響/很有影響<br>
+他出的訊息/他發出的訊息<br>
+在了幾天之後/在過了幾天之後<br>
+偶向白素提起/偶然向白素提起<br>
+基楚/基礎<br>
+達到一程度/達到一定程度<br>
+兩麗人/兩位麗人<br>
+腿長膚白/頎長膚白<br>
+所以「禮下於人，必有所求」/所謂「禮下於人，必有所求」<br>
+想了這一點/想到了這一點<br>
+我的意外之外/我的意料之外<br>
+減自己的威風/滅自己威風<br>
+曾給領教/曾經領教<br>
+原來主任也來了/原來王主任也來了<br>
+航太/航天<br>
+這樣青年/這個青年<br>
+和她對話/和她們對話<br>
+她們要求我反客為主/她們要求我而反客為主<br>
+提醒十二萬分的精神/打醒十二萬分的精神<br>
+我雖然忌憚，/我雖然忌憚王蓮，<br>
+欣賞好心問話的風格/欣賞她說話的風格<br>
+嘆了口氣/嘆了一口氣<br>
+看到這個名字/看到過這個名字<br>
+設想當然不會確定的結果/設想當然不會有確定的結果<br>
+極權統治的幫手/極權統治者的幫手<br>
+，竟遇上了/，究竟遇上了<br>
+等白素出了/等白素出現<br>
+強勁正常/強勁異常<br>
+音像設備/音響設備<br>
+並在書房，極好的隔音設備/關在書房，藉極好的隔音設備<br>
+三雙手指/三隻手指<br>
+他沒有告訴──/他沒有告訴我──<br>
+和他祖父一樣/和他祖父、父親一樣<br>
+等如同神話/簡直如同神話<br>
+大權力獨得大金錢，小權力獨得小金錢/大權力獲得大金錢，小權力獲得小金錢<br>
+在工作上忙碌/在工作崗位上忙碌<br>
+可以用的方式/可以用的方法<br>
+自然搖了搖頭/自然而然搖了搖頭<br>
+無以為續/無以為繼<br>
+轉身去背對/轉過身去，背對<br>
+她們兩人這樣子/她們兩人的這種反應<br>
+就倒上樓梯/就倒射上樓梯<br>
+沒有理由相信/沒有理由不相信<br>
+累得她心情/顯得她心情<br>
+我這樣頭號/我這樣問<br>
+即再次發生/卻再次發生<br>
+神凝重/神色凝重<br>
+又有撚/又有失望<br>
+封鎖也只好/我也只好<br>
+死馬當活醫/死馬當活馬醫<br>
+然而若她們離去/然而若讓她們離去<br>
+要能過網路聯絡找我和白素/要通過網路聯絡我和白素<br>
+我確實吃了一驚/我卻著實吃了一驚<br>
+更令人驚人/更令人驚異<br>
+王連/王蓮<br>
+不自主/不由自主<br>
+酒在水葒/潑在水葒<br>
+流得的是/流行的是<br>
+表示大人並不/表示大人物並不<br>
+統治百萬雄兵/統領百萬雄兵<br>
+自己原諒：/自己原諒自己：<br>
+極具機靈/極其機靈<br>
+調數百萬/調動數百萬<br>
+王蓮不是知道/王蓮還是知道<br>
+我決定無可能/我決無可能<br>
+太約/大約<br>
+由些可知/由此可知<br>
+正循正常的方法/先循正常的方法<br>
+在職時候/在這時候<br>
+人派關係/人脈關係<br>
+近行軍/近衛軍<br>
+聽為平淡/聽來平淡<br>
+並不有/並沒有<br>
+大大達到了秘密工作/大大違反了秘密工作括<br>
+當時算給她/當時總算給她<br>
+在實際電郵上/在網際電郵上<br>
+決定事情參與/決定對事情參與<br>
+見我沒有回/見我沒有反應<br>
+臨出的時候/臨出門的時候<br>
+會有此問/會有此一問<br>
+決定不可能有/決不可能有<br>
+用正常的聲道：/用正常的聲音道：<br>
+知道有竊聽裝置/知道如果有竊聽裝置<br>
+哪最安全/哪裏最安全<br>
+我顯然配合白素/我雖然配合白素<br>
+凶烈/兇烈<br>
+白素需要（我自己更需要）/白素需要酒（我自己更需要）<br>
+哪裏不對了/哪裏不對頭了<br>
+夾上兩三句話/夾上兩三句真話<br>
+對台的演出/對台戲的演出<br>
+真得王蓮/真的引得王蓮<br>
+都將事事/都將真事<br>
+俏媚做給瞎子看/俏媚眼做給瞎子看<br>
+將秘密穿出來/將秘密揭穿出來<br>
+數萬計/數以萬計<br>
+嚴密和監視/嚴密的監視<br>
+性命關係的事情/性命交關的事情<br>
+拿起椅子來砸東西/拿起椅子來要砸東西<br>
+七十二變化/七十二般變化<br>
+哪能兒都不必去/哪兒都不必去<br>
+閉上你的烏鴉嘴/閉上你的鳥嘴<br>
+心裏實在不慣/心裏實在不忿<br>
+不會超過三分鐘/不會超過三秒鐘<br>
+在這十分鐘間/有這十分鐘時間<br>
+全部抓在手時/全都抓在手裏<br>
+暗暗稀奇/暗暗稱奇<br>
+軍事科學學院/軍事科技學院<br>
+提出起過/提起過<br>
+重量級人物應有的作用/重量級人物應有的作風<br>
+不按理出牌/不按牌理出牌<br>
+講座的問題上/討論的問題上<br>
+高居官員/高層官員<br>
+嚴密的監視之外/嚴密的監視之下<br>
+取得聯絡的是我/取得聯絡的人是我<br>
+自己想說的話再說一遍/自己說過的話想一遍<br>
+偷著嗎/偷著幹嗎<br>
+請求原諒的意識/請求原諒的意思<br>
+你惹你禍/你惹的禍<br>
+看是甚麼東西/看清楚是甚麼東西<br>
+四十雙之多/四十隻之多<br>
+伯勞上飛/伯勞向上飛<br>
+的攻效/的功效<br>
+它們/牠們（多處，用於伯勞鳥）<br>
+陡然發了/陡然發出了<br>
+三支伯勞/三隻伯勞<br>
+想像在要大/想像的要大<br>
+要對受過訓練/要對訓練<br>
+超卓越的/超卓的<br>
+言王等王蓮/言王不等王蓮<br>
+由此可知道秘密/由此可知這秘密<br>
+將的情形/將他的情形<br>
+意願傳達出去/意願雖然傳達出去<br>
+反唇相擊/反唇相譏<br>
+觀念上的判別/觀念上的差別<br>
+頭際發硬/頸際發硬<br>
+也用話劇演員/也用八流話劇演員<br>
+戈壁沙漠探腦袋/戈壁沙漠探頭探腦<br>
+得到最新竊聽技術/得窺最新竊聽技術<br>
+滓渣/渣滓<br>
+意外之外/意料之外<br>
+<br>
+缺句：<br>
+(pg034) 我看到朱槿和水葒，竟然同時以充滿了疑惑的眼光，望向王蓮，這分明是她們兩人<br>
+(pg038) 王蓮道：「根據我的分析，他的意思是：不能向我，或是任何關心他的人，透露任何有關他的事情，不然一定壞事，而事情不能壞，只能成！」<br>
+(pg052) ，通過的「關係」，當然是比她更加高級的人員。這就使問題更加令人莫名其妙：光輝這個<br>
+(pg068) 王蓮苦笑，攤了攤手：「可以是任何原因！」<br>
+(pg074) 所以她立刻哼了一聲，道：「這種事，對你說也沒有用處，你也不必起勁了！」）<br>
+(pg109) 和白素，他發了電郵，表達願望，電郵在網路上流傳，終於衛斯理，<br>
+(pg110) 事情非常重大，所以有關方面必須將光輝找回來。假設尋找的規模非常巨大，出動重量級人物<br>
+(pg131) ，必然是國家最高機密，而且必然和國防、情報機構有關，要動用這樣的設備，<br>
+(pg138) ，我還完全沒有概念──正因為如此，所以我心中才特別緊張，我又要以一敵眾，<br>
+(pg177) 戈壁沙漠說的「它」，當然是指那圓片。<br>
+(pg191) 言王望著我，向我點了點頭，好像他知道我想到了甚麼，而他在告訴我：<br>
+(pg195) 而且作為實驗計劃中的人，必須能產生腦電波──必須是活人！<br>
+(pg202) 他忽然發這種牢騷，非常之莫測高深。<br>
+(pg212) 言王苦笑，搖頭，也沒有說甚麼。<br>
+(pg213) 言王哈哈大笑，他的回答令我氣結，他道：<br>
+(pg214) 我這時候才知道他說過的「難怪難怪」是甚麼意思。<br>
+（pg215） ，我忍不住想哈哈大笑，可是為了提高惡作劇的程度，<br>
+<br>
 許諸/許褚 (自序) (Lin Lee 2012/4/9)<br>
 沈澱/沉澱 (第1章)<br>
 下卵于水/下卵於水 (以新版本為主)<br>
