Revised book 10G9 by adding vertical EPUB for vol. 2,4,5,6

--- a/html/Share/10G9.html
+++ b/html/Share/10G9.html
@@ -25,6 +25,7 @@ ShowUpdbDownload('2011/2/4 (168K)');
 ShowPdbDownload('2011/2/4 (164K)');
 ShowPrcDownload('2011/2/4 (190K)');
 ShowEpubDownload('2011/2/4 (130K)');
+ShowVEpubDownload('2023/10/21 (130K)');
 Space();
 $title = '地海六部曲．三'; 
 $book = 'I10G9c';
@@ -42,6 +43,7 @@ ShowUpdbDownload('2010/7/16 (235K) 2011/1/28');
 ShowPdbDownload('2010/7/17 (227K) 2011/1/28');
 ShowPrcDownload('2011/1/28 (254K)');
 ShowEpubDownload('2011/1/28 (170K)');
+ShowVEpubDownload('2023/10/21 (170K)');
 Space();
 $title = '地海六部曲．五'; 
 $book = 'I10G9e';
@@ -50,6 +52,7 @@ ShowUpdbDownload('2011/3/4 (326K)');
 ShowPdbDownload('2011/3/4 (316K)');
 ShowPrcDownload('2011/3/4 (355K)');
 ShowEpubDownload('2011/3/4 (227K)');
+ShowVEpubDownload('2023/10/21 (227K)');
 Space();
 $title = '地海六部曲．六'; 
 $book = 'I10G9f';
@@ -58,6 +61,7 @@ ShowUpdbDownload('2011/2/11 (234K)');
 ShowPdbDownload('2011/2/11 (227K)');
 ShowPrcDownload('2011/2/11 (254K)');
 ShowEpubDownload('2011/2/11 (159K)');
+ShowVEpubDownload('2023/10/21 (159K)');
 BookSectionEnd();
 ?>
 好讀書櫃《經典版》，《地海六部曲．一》感謝alias整理製作。感謝孔繁鈞、金澍、James、張克、Jack Jiang勘誤。感謝Naomi按原書勘誤一42處。<br>
