Upload of books 1010490323, 1010490324, and 1010490325

--- a/html/book/audioAB001.html
+++ b/html/book/audioAB001.html
@@ -74,6 +74,8 @@ PlayMP3('AB001-64', '第三十五篇《阮元誤考燒餅紋》書亞錄音 2023
 PlayMP3('AB001-65', '第三十六篇《梁章鉅飲饌瑣記》書亞錄音 2023/10/5');
 PlayMP3('AB001-66', '第三十七之一篇《曾國藩的非常之食１獨特口福》書亞錄音 2023/10/12');
 PlayMP3('AB001-67', '第三十七之二篇《曾國藩的非常之食２曾氏寶典》書亞錄音 2023/10/12');
+PlayMP3('AB001-68', '第三十八篇《左宗棠的三大嗜好》書亞錄音 2023/10/19');
+PlayMP3('AB001-69', '第三十九篇《李鴻章雜燴大尋蹤》書亞錄音 2023/10/19');
 
 ?>
 
