Upload of audiobook AB004 parts 10-11

--- a/html/book/audioAB004.html
+++ b/html/book/audioAB004.html
@@ -17,6 +17,8 @@ PlayMP3('AB004-06', '第六篇《不飛的天使》尋錄音 2023/10/5');
 PlayMP3('AB004-07', '第七篇《似曾相識燕歸來》尋錄音 2023/10/12');
 PlayMP3('AB004-08', '第八篇《夢裡花落知多少》尋錄音 2023/10/19');
 PlayMP3('AB004-09', '第九篇《一個男孩子的愛情》尋錄音 2023/10/19');
+PlayMP3('AB004-10', '第十篇《我的寫作生活》尋錄音 2023/10/26');
+PlayMP3('AB004-11', '第十一篇《駱駝為什麼要哭泣》尋錄音 2023/10/26');
 
 ?>
 
