Initial upload of book 1010490326

--- a/html/book/1499.html
+++ b/html/book/1499.html
@@ -12,21 +12,47 @@ $title = '深夜加油站遇見蘇格拉底';
 $book = 'B1499';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2014/3/7 (274K) 2016/11/4');
-ShowPrcDownload('2014/3/7 (289K) 2016/11/4');
-ShowMobiDownload('2016/11/4 (806K)');
-ShowEpubDownload('2014/3/7 (191K) 2016/11/4');
-ShowVEpubDownload('2014/3/7 (191K) 2016/11/4');
+ShowUpdbDownload('2014/3/7 (274K) 2016/11/4 2023/10/31');
+ShowEpubDownload('2014/3/7 (191K) 2016/11/4 2023/10/31');
+ShowVEpubDownload('2014/3/7 (191K) 2016/11/4 2023/10/31');
 BookSectionEnd();
 ?>
 <img src="covers/1499.jpg" HSPACE=8 align=right>
+好讀書櫃《典藏版》，感謝dexdeb提供2007年正體中文版掃瞄檔和封面圖片，並整理製作及勘誤成為《典藏版》。<br>
+<br>
 好讀書櫃《經典版》，感謝sue1289整理製作：「《深夜加油站遇見蘇格拉底》是一本振奮人心的書，很有閱讀的價值，相當值得推薦的好書，閱讀後在人生道上多多少少會有新的體會。」感謝Gilbert勘誤。感謝durianboy勘誤6處。<br>
 <br>
-丹·米爾曼（Dan Millman），為前世界級彈簧床錦標選手，美國史丹福大學體操教練，歐柏學院（Oberlin College）教授與武術輔導員。
-在1966年之前，作者的生活一直相當順遂，但其所獲得的榮譽和光環並沒有辦法讓他感受寧靜或滿足，直到遇見蘇格拉底……<br>
+丹·米爾曼（Dan Millman），為前世界級彈簧床錦標選手，美國史丹福大學體操教練，歐柏學院（Oberlin College）教授與武術輔導員。 在1966年之前，作者的生活一直相當順遂，但其所獲得的榮譽和光環並沒有辦法讓他感受寧靜或滿足，直到遇見蘇格拉底……<br>
+<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(dexdeb 2023/10/27)<br>
+依原書：<br>
+＊修改標點符號<br>
+＊修改標題、段落<br>
+＊更改相似的用詞用語<br>
+＊增加詞句<br>
+＊增加註記<br>
+＊更改通用字、詞<br>
+幽暗/黝暗<br>
+分電器蓋/分電盤蓋<br>
+魔法乍觀/魔法乍現<br>
+蒙著白霧/濛著白霧<br>
+俄羅斯/蘇聯<br>
+德國選手/東德選手<br>
+巴黎的皮嘉爾區/巴黎的畢加勒路<br>
+很驚訝地竟然/很驚訝他竟然<br>
+再請他重複一次/再請教他的大名一次<br>
+突然啟動/突然晃動<br>
+新烤了白漆/新拷了白漆<br>
+疏解/紓解<br>
+交待/交代(原書有誤)<br>
+ＣＣC/ＣＣ<br>
+紛至遝來/紛至沓來<br>
+靜坐──整天/靜坐一整天<br>
+柔情密意/柔情蜜意<br>
+<br>
 (mPDB 2016/11/4)<br>
 重的甲胄游泳/重的甲冑游泳<br>
 那位女土想把/那位女士想把<br>
