--- a/html/book/audioAB004.html
+++ b/html/book/audioAB004.html
@@ -19,6 +19,7 @@ PlayMP3('AB004-08', '第八篇《夢裡花落知多少》尋錄音 2023/10/19');
 PlayMP3('AB004-09', '第九篇《一個男孩子的愛情》尋錄音 2023/10/19');
 PlayMP3('AB004-10', '第十篇《我的寫作生活》尋錄音 2023/10/26');
 PlayMP3('AB004-11', '第十一篇《駱駝為什麼要哭泣》尋錄音 2023/10/26');
+PlayMP3('AB004-12', '第十二篇《在風裡飄揚的影子》尋錄音 2023/11/2');
 
 ?>
 
