Initial upload of books 1010490327, 1010490328, 1010490329, and 1010490330

--- a/html/Share/1010490316.html
+++ b/html/Share/1010490316.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("瑪麗．海金斯．克拉克【你是下一個】");
+SetTitle("瑪莉．海金斯．克拉克【你是下一個】");
 SetLink('<a href="?M=hd&P=mystery-2">懸疑小說 書目</a>');
 </script>
 
@@ -7,7 +7,7 @@ SetLink('<a href="?M=hd&P=mystery-2">懸疑小說 書目</a>');
 <tr><td>
 <?php
 require_once('show-book.php');
-$author = '瑪麗．海金斯．克拉克';
+$author = '瑪莉．海金斯．克拉克';
 $title = '你是下一個';
 $book = 'P1010490316';
 BookSectionBegin();
@@ -56,7 +56,7 @@ BookSectionEnd();
 <br>
 <strong>作者簡介：</strong><br>
 <br>
-瑪麗．海金斯．克拉克（Mary Higgins Clark）<br>
+瑪莉．海金斯．克拉克（Mary Higgins Clark）<br>
 <br>
 當代難得一見的說故事高手，被譽為「美國懸疑小說天后」，曾獲美國懸疑推理小說最高榮譽愛倫坡獎之「大師獎」。《紐約時報》暢銷書第一名作家，著有三十四本懸疑小說、三本短篇小說集，以及一本歷史小說、兩本童書。另外，她還寫了一本回憶錄，並與女兒卡洛．海金斯．克拉克著有五本懸疑小說。她的書暢銷各國，單在美國就賣出超過一億本。<br>
 <br>
