--- a/html/Share/1010490321.html
+++ b/html/Share/1010490321.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("瑪麗．海金斯．克拉克【夢遊】");
+SetTitle("瑪莉．海金斯．克拉克【夢遊】");
 SetLink('<a href="?M=hd&P=mystery-2">懸疑小說 書目</a>');
 </script>
 
@@ -7,7 +7,7 @@ SetLink('<a href="?M=hd&P=mystery-2">懸疑小說 書目</a>');
 <tr><td>
 <?php
 require_once('show-book.php');
-$author = '瑪麗．海金斯．克拉克';
+$author = '瑪莉．海金斯．克拉克';
 $title = '夢遊';
 $book = 'P1010490321';
 BookSectionBegin();
@@ -61,7 +61,7 @@ BookSectionEnd();
 <br>
 <strong>作者簡介：</strong><br>
 <br>
-瑪麗．海金斯．克拉克（Mary Higgins Clark）<br>
+瑪莉．海金斯．克拉克（Mary Higgins Clark）<br>
 <br>
 她是當代難得一見的說故事高手，被譽為「美國懸疑小說之后」，曾獲美國懸疑推理小說最高榮譽愛倫坡大獎之「推理大師賞」。她是愛爾蘭後裔，卻在紐約出生、成長，從一九五六年開始在雜誌上發表作品，幾乎每一本書都是排行榜上的常勝軍，其成名作《我的孩子在哪裡》造成轟動後，陸續出版有《後會誰說無期》等近三十本懸疑小說、三本短篇故事集、一本歷史小說《弗農山愛情故事》（Mount Vernon Love Story），及一本回憶錄《廚房的特權》（Kitchen Privileges）。並與女兒攜手合著《裝飾教堂》（Deck the Halls）、《他看得到你睡覺》（He Sees You When You're Sleeping），《聖誕大盜》（Christmas Thief）等。改編成電影的作品包括《情迷殺機》（You Belong to Me）、《多重殺機》（All Around the Town）、《前世恨未了》（Haven't We Met Before）等，都曾在各大媒體及台灣電視頻道播映過。<br>
 <br>
