--- a/html/Share/1010490323.html
+++ b/html/Share/1010490323.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("瑪麗．海金斯．克拉克【後會誰說無期】");
+SetTitle("瑪莉．海金斯．克拉克【後會誰說無期】");
 SetLink('<a href="?M=hd&P=mystery-2">懸疑小說 書目</a>');
 </script>
 
@@ -7,7 +7,7 @@ SetLink('<a href="?M=hd&P=mystery-2">懸疑小說 書目</a>');
 <tr><td>
 <?php
 require_once('show-book.php');
-$author = '瑪麗．海金斯．克拉克';
+$author = '瑪莉．海金斯．克拉克';
 $title = '後會誰說無期';
 $book = 'P1010490323';
 BookSectionBegin();
@@ -51,7 +51,7 @@ BookSectionEnd();
 <br>
 <strong>作者簡介：</strong><br>
 <br>
-瑪麗．海金斯．克拉克（Mary Higgins Clark）<br>
+瑪莉．海金斯．克拉克（Mary Higgins Clark）<br>
 <br>
 當代難得一見的說故事高手，被譽為「美國懸疑小說之后」，曾獲美國懸疑推理小說最高榮譽愛倫坡獎之「大師獎」。她是愛爾蘭後裔，在紐約出生、成長，從一九五六年開始在雜誌上發表作品，幾乎每一本書都是排行榜上的常勝軍，其成名作《我的孩子在哪裡》造成轟動後，陸續出版《後會誰說無期》等三十多本懸疑小說、數本短篇故事集、一本歷史小說《弗農山愛情故事》及一本回憶錄《廚房的特權》。她也與女兒攜手合著《裝飾教堂》、《聖誕大盜》等。克拉克作品改編成電影的包括《消逝中的女人》、《多重殺機》、《前世恨未了》等，都曾在各大媒體及台灣電視頻道播映過。<br>
 <br>
