Initial upload of audiobooks AB001 part 72, AB003 part 16, and AB004 part 13

--- a/html/book/audioAB001.html
+++ b/html/book/audioAB001.html
@@ -78,6 +78,7 @@ PlayMP3('AB001-68', '第三十八篇《左宗棠的三大嗜好》書亞錄音 2
 PlayMP3('AB001-69', '第三十九篇《李鴻章雜燴大尋蹤》書亞錄音 2023/10/19');
 PlayMP3('AB001-70', '第四十之一篇《慈禧的食苑穢聞１奢華排場》書亞錄音 2023/10/26');
 PlayMP3('AB001-71', '第四十之二篇《慈禧的食苑穢聞２快活食補》書亞錄音 2023/11/2');
+PlayMP3('AB001-72', '第四十之三篇《慈禧的食苑穢聞３素食養生》書亞錄音 2023/11/7');
 
 ?>
 
