Upload of revised book QSA17 and QSA26

--- a/html/Share/QSA17.html
+++ b/html/Share/QSA17.html
@@ -12,19 +12,33 @@ $author = '倪匡';
 $title = '幽靈星座'; 
 $book = 'HQSA17';
 ShowBookTitle() ;
-ShowUpdbDownload('2012/3/31 (195K) 2016/5/6');
-ShowPrcDownload('2012/3/31 (184K) 2016/5/6');
-ShowMobiDownload('2016/5/6 (511K)');
-ShowEpubDownload('2012/3/31 (113K) 2016/5/6');
-ShowVEpubDownload('2016/5/6 (113K)');
+ShowUpdbDownload('2012/3/31 (195K) 2016/5/6 2023/11/16');
+ShowEpubDownload('2012/3/31 (113K) 2016/5/6 2023/11/16');
+ShowVEpubDownload('2016/5/6 (113K) 2023/11/16');
 BookSectionEnd();
 ?>
+<img src="covers/QSA17.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝guinness提供掃瞄檔，感謝Henry整理製作及勘誤成為【典藏版】。<br>
+<br>
 好讀書櫃《經典版》，感謝Jerry Peng提供文字檔。感謝henry142勘誤3處。<br>
 <br>
 倪匡之原振俠傳奇之17。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2023/11/15)<br>
+（按原書重新分為八個章節）<br>
+──/…… （多處）<br>
+歡娛的氣氛/歡愉的氣氛<br>
+學的是化學/學的是化工<br>
+才停住，一轉身/才停住，不轉身<br>
+平靜地出奇/平靜得出奇<br>
+到處在找──/到處在找你──<br>
+相令自己/想令自己<br>
+面且充滿了詩意/而且充滿了詩意<br>
+在思想受了禁錮/在思想上受了禁錮<br>
+瀰天大禍/彌天大禍<br>
+<br>
 (mPDB 2016/5/6)<br>
 瑜珈術/瑜伽術<br>
 震憾/震撼<br>
