--- a/html/Share/QSA26.html
+++ b/html/Share/QSA26.html
@@ -12,19 +12,37 @@ $author = '倪匡';
 $title = '自殺陰謀'; 
 $book = 'HQSA26';
 ShowBookTitle();
-ShowUpdbDownload('2012/3/31 (183K) 2016/5/6');
-ShowPrcDownload('2012/3/31 (174K) 2016/5/6');
-ShowMobiDownload('2016/5/6 (485K)');
-ShowEpubDownload('2012/3/31 (109K) 2016/5/6');
-ShowVEpubDownload('2016/5/6 (109K)');
+ShowUpdbDownload('2012/3/31 (183K) 2016/5/6 2023/11/16');
+ShowEpubDownload('2012/3/31 (109K) 2016/5/6 2023/11/16');
+ShowVEpubDownload('2016/5/6 (109K) 2023/11/16');
 BookSectionEnd();
 ?>
+<img src="covers/QSA26.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝guinness提供掃瞄檔，感謝Henry整理製作及勘誤成為【典藏版】。<br>
+<br>
 好讀書櫃《經典版》，感謝Jerry Peng提供文字檔。感謝henry142勘誤1處。<br>
 <br>
 倪匡之原振俠傳奇之26。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2023/11/15)<br>
+（按原書重新分為八個章節）<br>
+──/…… （多處）<br>
+絕對地壞/絕對的壞<br>
+變成為/變化成為<br>
+甚麼因境/甚麼困境<br>
+「不是說/「也不是說<br>
+原振俠於是十分惱怒/原振俠更是十分惱怒<br>
+派人預謀殺她/派人陰謀殺她<br>
+有人處境/有人的處境<br>
+再對她抗拒/再和她抗拒<br>
+眼皮橫溢/眼波橫溢<br>
+比原振俠大！/比原振俠大多少！<br>
+箍住了女殺手/箍住了女殺手<br>
+酒精去氫酵素/酒精去氫酶<br>
+嚴厲的笑聲/淒厲的笑聲<br>
+<br>
 (mPDB 2016/5/6)<br>
 會剌不中/會刺不中<br>
 電光火石/電光石火<br>
